--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Main Page</title>
     <!-- Link to Google Fonts for Chakra Petch -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap">
-    <link rel="stylesheet" href="OPstyles.css">
+    <link rel="stylesheet" href="OPStyles.css">
     <!-- Link to Font Awesome for social media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
