--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Main Page</title>
     <!-- Link to Google Fonts for Chakra Petch -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap">
-    <link rel="stylesheet" href="OPStyles.css">
+    <link rel="stylesheet" href="OPstyles.css">
     <!-- Link to Font Awesome for social media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
@@ -44,17 +44,17 @@
             <div class="section">
                 <label class="section-header"><small>Projects</small></label>
                 <ul class="section-content">
-                    <li><a href="https://synthpapi.bandcamp.com/album/solange-chop-beat-tape-vol-1">- Solange Chop Beat Tape</a></li>
-                    <li><a href="https://synthpapi.bandcamp.com/album/whatever-happened-to-spottie-jones">- Whatever Happened to Spottee Jones?</a></li>
-                    <li><a href="https://synthpapi.bandcamp.com/album/blue-eyed-white-dragon">- Blue Eyed White Dragon</a></li>
-                    <li><a href="https://synthpapi.bandcamp.com/album/mango-dango">- Mango Dango</a></li>
-                    <li><a href="https://synthpapi.bandcamp.com/album/silver-ep">- Silver EP</a></li>
+                    <li><a href="https://synthpapi.bandcamp.com/album/solange-chop-beat-tape-vol-1">Solange Chop Beat Tape</a></li>
+                    <li><a href="https://synthpapi.bandcamp.com/album/whatever-happened-to-spottie-jones">Whatever Happened to Spottie Jones?</a></li>
+                    <li><a href="https://synthpapi.bandcamp.com/album/blue-eyed-white-dragon">Blue Eyed White Dragon</a></li>
+                    <li><a href="https://synthpapi.bandcamp.com/album/mango-dango">Mango Dango</a></li>
+                    <li><a href="https://synthpapi.bandcamp.com/album/silver-ep">Silver EP</a></li>
                 </ul>
             </div>
             <div class="section">
                 <label class="section-header"><small>Downloads</small></label>
                 <ul class="section-content">
-                    <li><a href="https://www.dropbox.com/scl/fo/q0euf2uodqnlxsbmf9igl/AId3z0dVcgWo3Bz3Noqx8lE?rlkey=g7w6gqxa9s1swjxv7mb6tl2f6&st=ij7jrhji&dl=0">- synthpack vol.1</a></li>
+                    <li><a href="https://www.dropbox.com/scl/fo/q0euf2uodqnlxsbmf9igl/AId3z0dVcgWo3Bz3Noqx8lE?rlkey=g7w6gqxa9s1swjxv7mb6tl2f6&st=ij7jrhji&dl=0">synthpack vol.1</a></li>
                 </ul>
             </div>
         </section>
