added youtube link + adjusted logo positon

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <a href="https://www.youtube.com/@synthpapi" class="fab fa-youtube"></a>
             <a href="https://www.instagram.com/lovesynthpapi/" class="fab fa-instagram"></a>
             <a href="https://www.tiktok.com/@synthpapi" class="fab fa-tiktok"></a>
+            <a href="https://soundcloud.com/synthpapi" class="fab fa-soundcloud"></a>
+            <a href="https://synthpapi.bandcamp.com/" class="fab fa-bandcamp"></a>
         </nav>
     </header>
 
@@ -30,6 +32,19 @@
                 <img src="synthpapi baby blue logo 2.PNG" alt="SynthPapi Logo">
             </a>
         </div>
+        
+        <!-- YouTube Video Embed -->
+    <div class="video-container">
+        <iframe 
+            width="560" 
+            height="315" 
+            src="https://youtu.be/iFwW75HuiE0" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe>
+    </div>
     </section>
 
     <!-- Main Body Section with Left-Aligned Headers -->
@@ -38,7 +53,7 @@
             <div class="section">
                 <label class="section-header"><small>About</small></label>
                 <ul class="section-content">
-                    <br><li>Coming Soon</li></br>
+                    <br><li>Producer + Songwtier</li></br>
                 </ul>
             </div>
             <div class="section">
@@ -49,6 +64,7 @@
                     <li><a href="https://synthpapi.bandcamp.com/album/blue-eyed-white-dragon">Blue Eyed White Dragon</a></li>
                     <li><a href="https://synthpapi.bandcamp.com/album/mango-dango">Mango Dango</a></li>
                     <li><a href="https://synthpapi.bandcamp.com/album/silver-ep">Silver EP</a></li>
+                    <li><a href="https://youtube.com/playlist?list=PLpLgPOx-6Lkpd4K0t5KpFo4V3PScxqT7U&si=n0iHmT9T5K7LtaqJ">BEATS</a></li>
                 </ul>
             </div>
             <div class="section">
