edited soundcloud link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="https://www.youtube.com/@synthpapi" class="fab fa-youtube"></a>
             <a href="https://www.instagram.com/lovesynthpapi/" class="fab fa-instagram"></a>
             <a href="https://www.tiktok.com/@synthpapi" class="fab fa-tiktok"></a>
-            <a href="https://soundcloud.com/synthpapi" class="fab fa-soundcloud"></a>
+            <a href="https://soundcloud.com/lovesynthpapi" class="fab fa-soundcloud"></a>
             <a href="https://synthpapi.bandcamp.com/" class="fab fa-bandcamp"></a>
         </nav>
     </header>
