--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <iframe 
             width="560" 
             height="315" 
-            src="https://www.youtube.com/embed/VHKXLpSYGRg"             
+            src="https://www.youtube.com/embed/iFwW75HuiE0"             
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -64,7 +64,7 @@
                     <li><a href="https://synthpapi.bandcamp.com/album/blue-eyed-white-dragon">Blue Eyed White Dragon</a></li>
                     <li><a href="https://synthpapi.bandcamp.com/album/mango-dango">Mango Dango</a></li>
                     <li><a href="https://synthpapi.bandcamp.com/album/silver-ep">Silver EP</a></li>
-                    <li><a href="https://youtube.com/playlist?list=PLpLgPOx-6Lkpd4K0t5KpFo4V3PScxqT7U&si=n0iHmT9T5K7LtaqJ">BEATS</a></li>
+                
                 </ul>
             </div>
             <div class="section">
@@ -72,6 +72,12 @@
                 <ul class="section-content">
                     <li><a href="https://www.dropbox.com/scl/fo/q0euf2uodqnlxsbmf9igl/AId3z0dVcgWo3Bz3Noqx8lE?rlkey=g7w6gqxa9s1swjxv7mb6tl2f6&st=ij7jrhji&dl=0">synthpack vol.1</a></li>
                 </ul>
+            </div>
+            <!-- New Section with a Direct Link -->
+            <div class="section">
+                <label class="section-header a">
+                    <a href="https://youtube.com/playlist?list=PLpLgPOx-6Lkpd4K0t5KpFo4V3PScxqT7U&si=n0iHmT9T5K7LtaqJ" class="header-link">Beats</a>
+                </label>
             </div>
         </section>
     </main>
