--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <!-- New Section with a Direct Link -->
             <div class="section">
                 <label class="section-header a">
-                    <a href="https://youtube.com/playlist?list=PLpLgPOx-6Lkpd4K0t5KpFo4V3PScxqT7U&si=n0iHmT9T5K7LtaqJ" class="header-link">Beats</a>
+                    <a href="https://youtube.com/playlist?list=PLpLgPOx-6Lkpd4K0t5KpFo4V3PScxqT7U&si=n0iHmT9T5K7LtaqJ" class="header-link"><small>Beats</small></a>
                 </label>
             </div>
         </section>
