Spelling check + beats and downloads swap

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="section">
                 <label class="section-header"><small>About</small></label>
                 <ul class="section-content">
-                    <br><li>Producer + Songwtier</li></br>
+                    <br><li>Producer + Songwriter</li></br>
                 </ul>
             </div>
             <div class="section">
@@ -66,19 +66,19 @@
                     <li><a href="https://synthpapi.bandcamp.com/album/silver-ep">Silver EP</a></li>
                 
                 </ul>
-            </div>
-            <div class="section">
-                <label class="section-header"><small>Downloads</small></label>
-                <ul class="section-content">
-                    <li><a href="https://www.dropbox.com/scl/fo/q0euf2uodqnlxsbmf9igl/AId3z0dVcgWo3Bz3Noqx8lE?rlkey=g7w6gqxa9s1swjxv7mb6tl2f6&st=ij7jrhji&dl=0">synthpack vol.1</a></li>
-                </ul>
-            </div>
             <!-- New Section with a Direct Link -->
             <div class="section">
                 <label class="section-header a">
                     <a href="https://youtube.com/playlist?list=PLpLgPOx-6Lkpd4K0t5KpFo4V3PScxqT7U&si=n0iHmT9T5K7LtaqJ" class="header-link"><small>Beats</small></a>
                 </label>
             </div>
+        </div>
+        <div class="section">
+            <label class="section-header"><small>Downloads</small></label>
+            <ul class="section-content">
+                <li><a href="https://www.dropbox.com/scl/fo/q0euf2uodqnlxsbmf9igl/AId3z0dVcgWo3Bz3Noqx8lE?rlkey=g7w6gqxa9s1swjxv7mb6tl2f6&st=ij7jrhji&dl=0">synthpack vol.1</a></li>
+            </ul>
+        </div>
         </section>
     </main>
 
