--- a/Index.html
+++ b/Index.html
@@ -82,7 +82,7 @@
         <div class="section">
             <label class="section-header"><small>Downloads</small></label>
             <ul class="section-content">
-                <li><a href="https://www.dropbox.com/scl/fo/q0euf2uodqnlxsbmf9igl/AId3z0dVcgWo3Bz3Noqx8lE?rlkey=g7w6gqxa9s1swjxv7mb6tl2f6&st=ij7jrhji&dl=0">synthpack vol.1</a></li>
+                <li><a href="https://buy.stripe.com/28o9Dgc0O1bkgus6os">synthpack vol.1</a></li>
             </ul>
 
         </div>
